force-app/main/default/objects/Finance__c/Finance__c.object-meta.xml
<CustomObject>
    <description>we can maintain all financial information related to events also, this allows you to manage event revenue, billing processes, and payment statuses efficiently. Create a Payment Record: When an attendee registers for an event and makes a payment, a Payment record can be created in Salesforce to capture the payment details.</description>
    <label>Finance</label>
    <nameField>
        <label>Finance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>