force-app/main/default/objects/Finance__c/fields/Advance_payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_payment__c</fullName>
    <label>Advance payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>