force-app/main/default/objects/Finance__c/fields/Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Event_Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Budget</label>
    <referenceTo>Event_Budget__c</referenceTo>
    <relationshipName>Finance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>