force-app/main/default/objects/Finance__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event ID</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipName>Finance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>