force-app/main/default/objects/Finance__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Name</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>