force-app/main/default/objects/Finance__c/fields/F_B_Expense__c.field-meta.xml
<CustomField>
    <fullName>F_B_Expense__c</fullName>
    <label>F &amp; B Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>