force-app/main/default/objects/Finance__c/fields/Hospitality_Expense__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Expense__c</fullName>
    <label>Hospitality Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>