force-app/main/default/objects/Finance__c/fields/Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Net_Profit__c</fullName>
    <formula>Total_Expenses__c * Profit_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>