force-app/main/default/objects/Finance__c/fields/Profit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percent__c</fullName>
    <label>Profit Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>