force-app/main/default/objects/Finance__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>We created lookup with quote because we have to use total price from quote(in formula field)</description>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Finances</relationshipLabel>
    <relationshipName>Finances</relationshipName>
    <type>Lookup</type>
</CustomField>