force-app/main/default/objects/Finance__c/fields/Total_Amount_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_to_Pay__c</fullName>
    <formula>(Total_Expenses__c +( Total_Expenses__c *  Profit_Percent__c ))+ ((Total_Expenses__c +( Total_Expenses__c *  Profit_Percent__c ))*0.18)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount to Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>