force-app/main/default/objects/Finance__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <formula>F_B_Expense__c +  Hospitality_Venue_Expense__c +  Logistic_Expense__c +  Venue_Expenses__c + Service_Charge__c + Miscellaneous_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>