force-app/main/default/objects/Finance__c/fields/Venue_Expense__c.field-meta.xml
<CustomField>
    <fullName>Venue_Expense__c</fullName>
    <formula>CEILING((  EventID__r.End_Date_Time__c  - EventID__r.Event_Date_Time__c) * 1440 / 1440) *  EventID__r.Venues__r.Venue_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>