force-app/main/default/objects/Finance__c/fields/Venue_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Venue_Expenses__c</fullName>
    <label>Venue Expenses</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>